--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=1111
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-jwt.secret = 15 * 60 * 1000
+jwt.secret = Secret
 
 # jpa, hibernate
 spring.jpa.show-sql=true
