refactor source and create api send mail

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,16 @@ jwt.secret = Secret
 
 # jpa, hibernate
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+# send mail SMTP
+
+url.origin=http://119.82.130.211:8080
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=doquangphuoc9999@gmail.com
+spring.mail.password=ptntuqbyavecmlgl
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.protocol=smtp
+spring.mail.properties.mail.transport.protocol=smtp
