add chat GPT into java spring boot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,11 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.protocol=smtp
 spring.mail.properties.mail.transport.protocol=smtp
+
+
+#chat gpt
+chatgpt.model-name=gpt2
+chatgpt.temperature=0.7
+chatgpt.max-length=100
+openai.api.base-url=https://api.openai.com/v1/
+openai.api.key=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
