--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+
+# My SQL
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/jwt
 spring.datasource.username=root
 spring.datasource.password=1111
@@ -10,7 +12,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 # send mail SMTP
-
 url.origin=http://119.82.130.211:8080
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -21,10 +22,9 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.protocol=smtp
 spring.mail.properties.mail.transport.protocol=smtp
 
-
 #chat gpt
 chatgpt.model-name=gpt2
 chatgpt.temperature=0.7
 chatgpt.max-length=100
 openai.api.base-url=https://api.openai.com/v1/
-openai.api.key=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
+openai.api.key=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
